# RML-mickrobot_lerobot

./: README.md  instruct.md
.cache/calibration/lekiwi/: main_leader.json
lerobot/common/robot_devices/: control_utils.py
lerobot/common/robot_devices/motors/: dynamixel.py
lerobot/common/robot_devices/remote_robot/: Arm.h  Arm_gen72.cpp  CMakeLists.txt  Chassis.h  Chassis_mick.cpp  build_and_run.sh  config.json  config_loader.cpp  config_loader.h  factory.cpp  factory.h  remote.cpp  remote.py  remotev1.cpp
lerobot/common/robot_devices/robots/: configs.py  dynamixel_calibration.py  feetech_calibration.py  lekiwi_remote.py  mobile_manipulator.py  remote.cpp  utils.py
lerobot/scripts/: configure_motor.py  control_robot.py
